# context-scope-pack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  devenv.nix  flake.nix  pyproject.toml  test_cohere_v4.py
.claude/: goals.md  plan.md  settings.json  tasks.md
.claude/hooks/: scope_posttool_write_edit.py  scope_pretool_read.py  scope_session_end.py  scope_session_start.sh  scope_user_prompt_submit.py
.claude/skills/compress/: SKILL.md
.claude/skills/summary/: SKILL.md
benchmarks/: __init__.py  __main__.py  compare_embedders.py  config.py  corpus.py  llm_evaluator.py  mock_embedder.py  reporter.py
benchmarks/runners/: __init__.py  compression.py  fallback.py  mcp.py  performance.py  quality.py  relevance.py
nix/: README.md  home-module.nix
src/scopepack/: __init__.py  ast_chunker.py  daemon.py  db.py  embedders.py  mcp_server.py  mcp_utils.py  scope.py
src/scopepack/hooks/: __init__.py
tests/: __init__.py  test_ast_chunker.py  test_scope.py
