[project]
name = "scopepack"
version = "0.1.0"
description = "Token-efficient context management for Claude Code via SCOPE-style compression"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ztaylor", email = "ztaylor@example.com"}
]
keywords = ["claude", "llm", "context", "compression", "scope"]

[project.urls]
Homepage = "https://github.com/zach-source/context-scope-pack"
Repository = "https://github.com/zach-source/context-scope-pack"
Issues = "https://github.com/zach-source/context-scope-pack/issues"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
bedrock = [
    "boto3>=1.34.0",
]
ast = [
    "tree-sitter-language-pack>=0.7.0",
]
all = [
    "scopepack[dev,bedrock,ast]",
]

[project.scripts]
scopepack-daemon = "scopepack.daemon:main"
scopepack-mcp = "scopepack.mcp_server:main"
scopepack-benchmark = "benchmarks.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scopepack"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "SIM102", # nested if statements (sometimes more readable)
]

[tool.ruff.lint.isort]
known-first-party = ["scopepack"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
